# prototype_falcon

./: .gitignore  README.md  app.py  config.py  pyproject.toml  requirements.txt
src/core/: id_generator.py
src/models/: album.py  comment.py  photo.py  post.py  todo.py  user.py
src/resources/: albums.py  comments.py  health.py  posts.py  users.py
src/routers/: albums_router.py  comments_router.py  health_router.py  posts_router.py  users_router.py
src/schemas/: post_schema.py
src/services/: album_service.py  comment_service.py  post_service.py  user_service.py
